fixed some issues with scrollbar in desktop mode, now it's not visible but still functionnal

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,16 @@ body {
   body {
     display: flex;
     justify-content: center;
-    overflow-y: hidden;
+    overflow-y: scroll;
+  }
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 
   #root {
