--- a/frontend/src/components/Timeline/Timeline.css
+++ b/frontend/src/components/Timeline/Timeline.css
@@ -36,6 +36,10 @@
   text-align: center;
 }
 
+.sunFilter {
+  filter: hue-rotate(30deg) brightness(170%);
+}
+
 .journalTimeline {
   padding: 0.8rem;
   display: flex;
